Static files cdn (#5)
* | raunak | dashboard and chart changes

* | Raunak | removed session cookie code

* |Priyanshu |added translation in Thankyou page for contribution

* |Priyanshu | changed the Website Copyright 2020 to 2021

* |Umair| Only showing validations done in the current batch

* |Priyanshu | fixed unit test for thankyou page

* | Raunak | Added data last updated on dashboard

* | Raunak | Added data last updated on dashboard

* |Priyanshu | hide instructions from validation page and translate it in Hindi

* |Priyanshu | hide speech recognition model and update hi.json for Dashboard

* |Priyanshu | fix error in dropdown on About-us page

* | Raunak | contribute now changes on dashboard

* | Raunak | fix bug on about us page

* |Priyanshu | fix indentation on home.js

* |Priyanshu |change value Gujrati to Gujarati and allow all language for contribution except English

* |Sreejith| Remove validation row during thank you message

* Niresh | Updated terms of use and privacy policy

* |Ramu| Add missing translations

* |Ramu| Add missing translation

* Niresh | Date format issue in server

* |Ramu| removed language quote

* |Sreejith + Umair| Fix for sentences are getting repeated  for the same user

* |Sreejith + Umair| fix umerged files in validator.js

* |Ramu| Remove languages from dropdown

* |priyanshu| show only five languages for localisation

* |Sreejith + Umair| Fix for validation constraint error

* |Sreejith + Umair| Fix for validation constraint error

* |Ramu| Add empty state representation in India map

* |priyanshu| show top five languages on languages bar

* |priyanshu| modify updatedHrsInSayListen component for default value in home.js

* | Parth + Raunak | translations updated for malyalam

* chore: update schedule for refresh

* |Ramu|Fix Bar chart label truncation

* |Ramu| push public folder

* | Raunak + Parth | translations for bengali

* Add autoscaler for every

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/dashboard.css">
-    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
 </head>
 
 <body>
@@ -176,16 +176,16 @@
         <%- include modals/speakerDetail.ejs %>
         <%- include modals/content-languages.ejs %>
             <%- include modals/say-listen-language.ejs%>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 <%- include common/footer.ejs %>
-                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-                    <script src="js/dashboard.js"></script>
+                    <script src="../js/dashboard.js"></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/maps.js"></script>
                     <script src="https://www.amcharts.com/lib/version/4.9.23/themes/animated.js"></script>
-                    <script src="js/draw-chart.js"></script>
+                    <script src="../js/draw-chart.js"></script>
 </body>
 
 </html>
