--- a/views/modals/speakerDetail.ejs
+++ b/views/modals/speakerDetail.ejs
@@ -93,7 +93,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label mt-2">
-                        <%- __('By proceeding ahead you agree to the <a href="/terms-and-conditions"> Terms and Conditions</a>') %>
+                        <%- __('By proceeding ahead you agree to the <a href="./terms-and-conditions.html"> Terms and Conditions</a>') %>
                     </label>
                 </div>
                 <div class="row justify-content-center mt-3">
