Revert "Static files cdn (#5)"
This reverts commit cf84b35dcddfa426acbf11f7797165b242f2c3f3.

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/home.css">
-    <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                         <%= __('Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.') %>
                     </p><br><br>
                 </div>
-                <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="../img/home.svg" class="img-fluid mr-n1" alt="home"></div>
+                <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="/img/home.svg" class="img-fluid mr-n1"></div>
             </div>
         </div>
         <div class="container-fluid bg-blue mt-n6 pb-6 pt-6">
@@ -53,7 +53,7 @@
         </div>
         <div class="container-fluid bg-light-blue mt-n5">
             <div class="row pb-6 pt-6 justify-content-center mt-5">
-                <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="../img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div>
+                <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div>
                 <div class="col-10 col-lg-6 text-left pb-5">
                     <p class="h1 font-wt-900 lh-5">
                         <%= __('Help your own language') %>
@@ -112,14 +112,13 @@
                 </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <%- include common/footer.ejs %>
             <%- include modals/speakerDetail.ejs %>
                 <script>document.body.querySelector("footer").classList.remove("fixed-bottom")</script>
                 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-                <script src="../js/about-us.js"></script>
+                <script src="js/about-us.js"></script>
 </body>
 
 </html>
