--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -6,22 +6,22 @@
             </div>
             <div class="d-lg-inline-flex justify-content-around mb-2">
                 <div class="py-2 px-16">
-                    <a href="./about-us.html">
+                    <a href="/about-us">
                         <%= __('About Us') %>
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./terms-and-conditions.html">
+                    <a href="/terms-and-conditions">
                         <%= __('Terms & Conditions') %>
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./terms-and-conditions#privacy-policy.html">
+                    <a href="/terms-and-conditions#privacy-policy">
                         <%= __('Privacy Policy') %>
                     </a>
                 </div>
                 <div class="py-2 px-16">
-                    <a href="./feedback.html">
+                    <a href="/feedback">
                         <%= __('Feedback') %>
                     </a>
                 </div>
@@ -29,4 +29,3 @@
         </div>
     </div>
 </footer>
-<script src="../js/locale.js"></script>
