--- a/views/common/headerForContributor.ejs
+++ b/views/common/headerForContributor.ejs
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <a class="logo-text text-dark" href="/">
             <h2 class="mb-0">
-                <img src="../img/BoloIndiaLogo.png" alt="Bolo India" width="64px">
+                <img src="/img/BoloIndiaLogo.png" alt="Bolo India" width="64px">
             </h2>
         </a>
         <div class="version-beta">Beta</div>
@@ -14,7 +14,7 @@
                 <div href="https://inference.vakyansh.in/" class="nav-link text-dark font-weight-bold dropdown-toggle cursor-pointer" id="localeDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <%= __('Language') %>
                 </div>
-                <div id="localisation_dropdown" class="dropdown-menu" aria-labelledby="localeDropdownMenuButton"><a id="english" class="dropdown-item" href="#" locale="en">English</a></div>
+                <div id="localisation_dropdown" class="dropdown-menu" aria-labelledby="localeDropdownMenuButton"><a id="english" class="dropdown-item" href="/changeLocale/en">English</a></div>
             </li>
             <li class="nav-item p-2 dropdown d-none">
                 <div href="https://inference.vakyansh.in/" class="nav-link text-dark font-weight-bold dropdown-toggle cursor-pointer" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><a class="dropdown-item" href="https://inference.vakyansh.in/indian-english">English (IN)</a><a class="dropdown-item" href="https://inference.vakyansh.in/gujarati">Gujarati</a> <a class="dropdown-item" href="https://inference.vakyansh.in/hindi">Hindi</a> <a class="dropdown-item" href="https://inference.vakyansh.in/kannada">Kannada</a> <a class="dropdown-item" href="https://inference.vakyansh.in/kannada-lm">Kannada (With LM)</a> <a class="dropdown-item" href="https://inference.vakyansh.in/odia">Odia</a> <a class="dropdown-item" href="https://inference.vakyansh.in/tamil">Tamil</a> <a class="dropdown-item" href="https://inference.vakyansh.in/telugu">Telugu</a></div>
             </li>
-            <li class="nav-item p-2"><a href="./about-us.html" class="nav-link text-dark font-weight-bold">
+            <li class="nav-item p-2"><a href="/about-us" class="nav-link text-dark font-weight-bold">
                     <%= __('About Us') %>
                 </a></li>
             <li class="nav-item p-2"><a class="nav-link text-dark font-weight-bold d-none" id="nav-user"><span class="material-icons align-middle mx-1">account_circle</span> <span id="nav-username"></span></a></li>
