--- a/views/badge-info.ejs
+++ b/views/badge-info.ejs
@@ -42,7 +42,7 @@
             <tr>
                 <th scope="col"><%= __('Level') %></th>
                 <th scope="col">
-                    <%= __('Contributions') %>
+                    <p><%= __('Contributions') %></p>
                     <p><%= __('(Recording + Validating)') %></p>
                 </th>
                 <th scope="col"><%= __('Badge') %></th>
