| Priyanshu | added image in pdf

--- a/views/modals/badge_milestone.ejs
+++ b/views/modals/badge_milestone.ejs
@@ -164,7 +164,7 @@
                 <h4 class="mb-3"><%- __('WoaaH!! You’ve earned your <span id="badge-name-1">1st</span> Badge') %></h4>
                 <p><span id="user-contribution" class="text-primary"></span><%- __('<span id="badge-name-2">Bronze</span> Contributor level achieved for contributing <span id="max-badge-count">50</span> sentences.') %>
                 </p>
-                <p><%- __('Your next goal is to reach <span id="next-badge-count">50</span> sentences to unlock your 2nd Badge. <a href="/badges">Know more</a>') %></p>
+                <p><%- __('Your next goal is to reach <span id="next-badge-count">50</span> sentences to unlock your <span id="next-badge">2nd</span> Badge. <a href="/badges">Know more</a>') %></p>
 
             </div>
         </div>
