--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -43,6 +43,7 @@
                 <span><%= __('You are a champion') %></span>
             </div>
             <h4 class="mb-3 thank-you-title"><%= __('WooHoo!! You took the first important step') %></h4>
+            <h4 class="mb-3 thank-you-title d-none"><%= __('You are driving the spirit of your language') %></h4>
             <p><span id="user-contribution" class="text-primary">5</span> <%= __('recordings contributed') %></p>
             <div class="mt-5 text-center">
                 <%= __('Share it with your friends and family') %>
